<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.beyond_todo_list.app.example.beyond_todo_list.MainActivity">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_trash_icon_3"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_register"
        android:icon="@drawable/ic_baseline_done_24"
        android:title="@string/register"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
</menu>