<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="@string/settings_usage"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="5"
            android:fontFamily="@font/alike"
            android:text="@string/settings_num_1"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="5"
            android:fontFamily="@font/alike"
            android:text="@string/settings_num_2"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/alike"
            android:text="@string/settings_num_3"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/settings_num_4"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="5"
            android:fontFamily="@font/alike"
            android:text="@string/settings_num_5"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textSettingExplain"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/alike"
            android:gravity="center"
            android:text="@string/settings_explain"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5sp"
                android:layout_weight="5"
                app:srcCompat="@drawable/ic_dog" />

            <TextView
                android:id="@+id/textSettingsTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/settings_the_day_before"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                app:srcCompat="@drawable/ic_baseline_warning_24" />

            <TextView
                android:id="@+id/textSettingsMiddle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/settings_today"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                app:srcCompat="@drawable/ic_ghost" />

            <TextView
                android:id="@+id/textSettingsEnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/settings_tommorow"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>